--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-owl-carousel",
+  "name": "v-owl-carousel-rtl",
   "description": "VueJS wrapper for Owl Carousel",
   "version": "1.0.8",
   "author": {
